--- a/Wine_Reviews_Notebook.ipynb
+++ b/Wine_Reviews_Notebook.ipynb
@@ -492,6 +492,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Roger Voss            25514\n",
+       "Michael Schachner     15134\n",
+       "Kerin O’Keefe         10776\n",
+       "Virginie Boone         9537\n",
+       "Paul Gregutt           9532\n",
+       "Matt Kettmann          6332\n",
+       "Joe Czerwinski         5147\n",
+       "Sean P. Sullivan       4966\n",
+       "Anna Lee C. Iijima     4415\n",
+       "Jim Gordon             4177\n",
+       "Anne Krebiehl MW       3685\n",
+       "Lauren Buzzeo          1835\n",
+       "Susan Kostrzewa        1085\n",
+       "Mike DeSimone           514\n",
+       "Jeff Jenssen            491\n",
+       "Alexander Peartree      415\n",
+       "Carrie Dykes            139\n",
+       "Fiona Adams              27\n",
+       "Christina Pickard         6\n",
+       "Name: taster_name, dtype: int64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.taster_name.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
