--- a/Wine_Reviews_Notebook.ipynb
+++ b/Wine_Reviews_Notebook.ipynb
@@ -531,6 +531,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from os import path\n",
+    "from PIL import Image\n",
+    "from wordcloud import WordCloud, STOPWORDS, ImageColorGenerator"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
