--- a/Wine_Reviews_Notebook.ipynb
+++ b/Wine_Reviews_Notebook.ipynb
@@ -1016,6 +1016,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['description'] = df.apply(lambda row: strip_punct(row['description']), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_model = markovify.NewlineText(df.description, state_size = 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "With overtly sweet with citrus zest Its simple but refreshing rounded white with touches of butter baking spice and blackberry preserves and muddled with flavors of coconutvanilla cream Its medium in body its almost undrinkable now in Ribera del Duero This is off dry this is a simple onedimensional wine\n",
+      "Solid black cherry and tart finishing on a jammy deepfruited finish give the wine shows the bright clean character that comes from the playfulness of this accessible wine\n",
+      "Just as remarkable as its label depicting the Queen of the variety with a licorice note backs up the berry fruit flavors of wild strawberry meet cardamon and nutmeg the minerality of the throat with flavors of bubblegum and a confectionery note wraps around ripe tight dry tannins Its just gorgeous combining classic lime sherbet then follows that lead to an elaborate wine thats ripe but restrained enough with apricot and honey aromas set up a stout bottle and run long on the nose and while the wine oozes ripe piefilling flavors of green pear and almond paste cola and ripe yet shows a bit green with an edge of generic white fruit Its solid and sturdy\n",
+      "Offers a rich creamy texture and minerality Spicy and not that complex and dramatic Pinot Noir dry and the finish and zingy aromas Mouthwatering crisp fruit and dark fruit and cassis fruit Sure there are flavors of small dark berries and a bit confected offering up herbaceous and aromatic wine with fine tannins that grip the finish Best after 2018\n",
+      "This starts out just a little snappy as spicy Thai or Vietnamese food\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "    print(text_model.make_sentence())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
