LDA notebook import

--- a/Wine_Reviews_Notebook.ipynb
+++ b/Wine_Reviews_Notebook.ipynb
@@ -1056,6 +1056,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from __future__ import print_function\n",
+    "import pyLDAvis\n",
+    "import pyLDAvis.sklearn\n",
+    "pyLDAvis.enable_notebook()\n",
+    "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
+    "from sklearn.decomposition import LatentDirichletAllocation"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
