--- a/Wine_Reviews_Notebook.ipynb
+++ b/Wine_Reviews_Notebook.ipynb
@@ -892,27 +892,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Wines & Winemakers        222\n",
-       "Testarossa                218\n",
-       "DFJ Vinhos                215\n",
-       "Williams Selyem           211\n",
-       "Louis Latour              199\n",
-       "                         ... \n",
-       "Familly Valéry              1\n",
-       "Ancient Roots               1\n",
-       "Gilga                       1\n",
-       "Domaine de la Jobeline      1\n",
-       "Château Moulin Lafitte      1\n",
+       "Wines & Winemakers    222\n",
+       "Testarossa            218\n",
+       "DFJ Vinhos            215\n",
+       "Williams Selyem       211\n",
+       "Louis Latour          199\n",
+       "                     ... \n",
+       "Villa Carra             1\n",
+       "Château Jeanrousse      1\n",
+       "Domaine de Beaupré      1\n",
+       "Des Amis                1\n",
+       "Heavenly Retreat        1\n",
        "Name: winery, Length: 16757, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -923,27 +923,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Pinot Noir                  13272\n",
-       "Chardonnay                  11753\n",
-       "Cabernet Sauvignon           9472\n",
-       "Red Blend                    8946\n",
-       "Bordeaux-style Red Blend     6915\n",
-       "                            ...  \n",
-       "Otskhanuri Sapere               1\n",
-       "Gamza                           1\n",
-       "Barbera-Nebbiolo                1\n",
-       "Paralleda                       1\n",
-       "Prunelard                       1\n",
+       "Pinot Noir                   13272\n",
+       "Chardonnay                   11753\n",
+       "Cabernet Sauvignon            9472\n",
+       "Red Blend                     8946\n",
+       "Bordeaux-style Red Blend      6915\n",
+       "                             ...  \n",
+       "Irsai Oliver                     1\n",
+       "Garnacha-Cabernet                1\n",
+       "Misket                           1\n",
+       "Biancu Gentile                   1\n",
+       "Pinot Gris-Gewürztraminer        1\n",
        "Name: variety, Length: 707, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
